k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-app
  labels:
    name: movie-app
