k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-ticket-app-service
  namespace: movie-app
  labels:
    app: movie-ticket-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: movie-ticket-app
